Fix CI: use Python 3.10 for GI bindings + pipx smoke test

--- a/.github/workflows/omnote-install-smoketest.yml
+++ b/.github/workflows/omnote-install-smoketest.yml
@@ -13,17 +13,17 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Install system dependencies (Ubuntu)
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            python3 python3-pip python3-venv pipx \
+            python3.10 python3.10-venv python3.10-distutils \
             python3-gi gir1.2-gtk-4.0 gir1.2-adw-1 \
-            xvfb
+            pipx xvfb
 
-      - name: Install OmNote with pipx
+      - name: Install OmNote with pipx (using Python 3.10)
         run: |
-          pipx install .
+          pipx install . --python python3.10
           pipx list
 
       - name: Run omnote --help under Xvfb
